--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "google-auth-library": "^9.14.2",
+    "js2xmlparser": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "os": "^0.1.2",
